kubernetes-yaml-config/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kms-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - https-gateway                      # 1
  http:
  - match:
    - uri:
        prefix: /quick
    route:
    - destination:
        host: cloud-kms-api             # 3
        port:
          number: 8080
